--- a/src/pages/account/style.scss
+++ b/src/pages/account/style.scss
@@ -27,3 +27,28 @@
       background-color: var(--vb-color-primary)!important;
     // }
   }
+.detail-page{
+    .square {
+        position: relative;
+        padding-left: 2rem;
+        font-size: 1.13rem;
+    }
+    .square::before {
+        position: absolute;
+        top: 0;
+        left: 10px;
+        content: '';
+        display: block;
+        float: left;
+        height: 1rem;
+        width: 1rem;
+        background: #389e0d;
+        border-radius: 4px;
+    }
+    .square-online::before{
+        background: #389e0d;
+    }
+    .square-offline::before{
+        background: #8c8c8c;
+    }
+}
