--- a/src/pages/event/style.module.scss
+++ b/src/pages/event/style.module.scss
@@ -2,6 +2,7 @@
 
 .item {
   border-bottom: 1px solid $gray-2;
+  margin-bottom: 10px;
 
   &:first-child {
     .itemLink {
@@ -11,10 +12,6 @@
 
   &:last-child {
     border-bottom: none;
-
-    .itemLink {
-      padding-bottom: 0;
-    }
   }
 }
 
@@ -23,21 +20,43 @@
   flex-direction: row;
   flex-wrap: nowrap;
   color: inherit;
-  padding-top: rem(30);
+  // padding-top: rem(30);
   padding-bottom: rem(25);
-
   &:hover,
   &:focus {
     color: inherit;
   }
 }
-
+.warning{
+  background-color: #fadb2b8c;
+  .title{
+    color: #c50808;
+  }
+}
+.alert{
+  background-color: #f773754f;
+  .title{
+    color: #d83437;
+  }
+}
+.offline{
+  background-color: #d5d2d2;
+  
+}
+.alertIcon{
+  text-align: center;
+  margin-top: auto;
+}
+.title{
+  font-weight: bold;
+  margin-top: 15px;
+}
 .itemCover {
   width: rem(73);
   flex-shrink: 0;
 
   img {
-    width: 100%;
+    width: 30px;
     height: auto;
   }
 }
@@ -46,8 +65,5 @@
 [data-kit-theme='dark'] {
   .item {
     border-bottom: 1px solid $dark-gray-4;
-    &:last-child {
-      border-bottom: none;
-    }
   }
 }
