update dashboard UI

--- a/src/pages/dashboard/home/Charts/recentAlert/style.module.scss
+++ b/src/pages/dashboard/home/Charts/recentAlert/style.module.scss
@@ -67,3 +67,9 @@
     border-bottom: 1px solid $dark-gray-4;
   }
 }
+.i_warning:before {
+	content: "\e020";
+}
+.filled {
+  fill: currentColor;
+}
