--- a/src/pages/dashboard/home/style.scss
+++ b/src/pages/dashboard/home/style.scss
@@ -1,14 +1,110 @@
-.battery-cell-panel{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.battery-cell-panel {
+  display: flex;
+  // justify-content: space-between;
+  flex-wrap: wrap;
+  .cell-item {
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+    line-height: 50px;
+    text-align: center;
+    .card-body {
+      padding: 0;
+      background-color: #60a743;
+      font-weight: 600;
+    }
+  }
 }
-.cell-item{
-    color: white;
+.cell-item {
+  color: white;
 }
-.battery-pagination{
-    margin-bottom: 20px!important;
-    padding-bottom: 20px;
-    margin-right: 10px!important;
-    text-align: right;
+.battery-pagination {
+  margin-bottom: 20px !important;
+  padding-bottom: 20px;
+  margin-right: 10px !important;
+  text-align: right;
+}
+
+.stats-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  .stats-icon img {
+    width: 70px;
+  }
+  .stats-body {
+    h1 {
+      font-weight: 600;
+    }
+    p {
+      font-size: 17px;
+      text-transform: uppercase;
+    }
+  }
+}
+.blue {
+  color: #096dd9;
+  h1 {
+    color: #096dd9;
+  }
+}
+
+.green {
+  color: #52c41a;
+  h1 {
+    color: #52c41a;
+  }
+}
+
+.red {
+  color: #f5222d;
+  h1 {
+    color: #f5222d;
+  }
+}
+.gold {
+  color: #faad14;
+  h1 {
+    color: #faad14;
+  }
+}
+.display-flex {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.ant-select-selector {
+  border-radius: 5px !important;
+}
+.block-pie-system {
+  min-height: 55px;
+  line-height: 30px;
+}
+div.dashboard-event {
+  display: inline-block;
+  .card-body{
+    background-color: #fbd29c;
+  }
+  .time-ago {
+    font-size: 12px;
+    color: #676460;
+  }
+}
+.block-area-chart {
+  .ant-tabs {
+    .ant-tabs-nav {
+      margin-bottom: 0;
+    }
+  }
+}
+.card-header {
+  background-color:#c8daff!important;
+}
+.block-info{
+    .block-detail{
+        padding-bottom: 10px;
+    }
+}
+.card-body{
+    background-color: #f0f0f047;
 }
