[BMS-84] Improve Device page

--- a/src/pages/device/style.scss
+++ b/src/pages/device/style.scss
@@ -55,3 +55,18 @@
         background: #8c8c8c;
     }
 }
+
+
+.device-page .custom-table {
+    thead th {
+        white-space: nowrap;
+
+        &:last-child {
+            width: 1%;
+        }
+    }
+
+    tbody td {
+        white-space: nowrap;
+    }
+}
