[BMS-82] Improve Block detail chart in dashboard

--- a/src/pages/dashboard/home/style.scss
+++ b/src/pages/dashboard/home/style.scss
@@ -108,15 +108,12 @@ div.dashboard-event {
   }
 }
 .card-header {
-  background-color:#c8daff!important;
+  // background-color:#c8daff!important;
 }
 .block-info{
     .block-detail{
         padding-bottom: 10px;
     }
-}
-.card-body{
-    background-color: #f0f0f047;
 }
 
 .custom-card-header {
@@ -124,4 +121,15 @@ div.dashboard-event {
   color: #ffffff;
   border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
   padding: 1rem 2rem;
+}
+
+.custom-ant-dashboard {
+  .ant-modal-body {
+    padding: 0 !important;
+  }
+  
+  .ant-modal-header {
+    background-color: #0D0C1C !important;
+    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
+  }
 }
