--- a/src/@vb/components/Breadcrumbs2/style.module.scss
+++ b/src/@vb/components/Breadcrumbs2/style.module.scss
@@ -4,7 +4,8 @@
   background: transparent;
   min-height: rem(64);
   border-bottom: 1px solid $border;
-  padding: rem(15) rem(30);
+  // padding: rem(15) rem(30);
+  padding: 1rem 0;
   display: flex;
   flex-direction: row;
   align-items: center;
