--- a/src/@vb/css/layout.scss
+++ b/src/@vb/css/layout.scss
@@ -26,13 +26,13 @@
 
     &__contentMaxWidth {
       .vb__layout__content {
-        max-width: rem(1280);
+        max-width: 1440px;
         margin: 0 auto;
       }
     }
 
     &__appMaxWidth {
-      max-width: rem(1280);
+      max-width: 1440px;
       margin: 0 auto;
     }
 
