--- a/src/pages/dashboard/home/style.scss
+++ b/src/pages/dashboard/home/style.scss
@@ -1,135 +1,188 @@
-.battery-cell-panel {
-  display: flex;
-  // justify-content: space-between;
-  flex-wrap: wrap;
-  .cell-item {
-    width: 50px;
-    height: 50px;
-    margin: 5px;
-    line-height: 50px;
-    text-align: center;
-    .card-body {
-      padding: 0;
-      background-color: #60a743;
-      font-weight: 600;
+body {
+  background-color: #f8f9fe !important;
+}
+.dashboard-page {
+  .select-bar {
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 1.5rem;
+    margin-bottom: 2rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 4rem;
+    row-gap: 1.5rem;
+    width: 100%;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+
+    @media (min-width: 996px) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .form-item {
+      width: 100%;
+      padding-top: 0.5rem;
+      padding-left: 1rem;
+      padding-right: 0.5rem;
+      padding-bottom: 0.5rem;
+      border: 1px solid #eee;
+      border-bottom: 2px solid #017efa;
+      background-color: #FBFBFF;
+      display: flex;
+      align-items: center;
+
+      .select {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        border: unset;
+        outline: unset;
+        background-color: unset;
+
+        option {
+          color: #000;
+        }
+      }
     }
   }
-}
-.cell-item {
-  color: white;
-}
-.battery-pagination {
-  margin-bottom: 20px !important;
-  padding-bottom: 20px;
-  margin-right: 10px !important;
-  text-align: right;
-}
 
-.stats-block {
-  display: flex;
-  align-items: center;
-  // padding-left: 2.2rem;
-  // justify-content: space-around;
-  .stats-icon img {
-    width: 70px;
-    margin-top: 0.8rem;
-    margin-bottom: 0.8rem;
-    margin-left: 2.2rem;
+  .main {
+    height: 100%;
+    max-width: calc(1440px - 235px);
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+
+    @media (min-width: 1200px) {
+      grid-template-columns: auto auto;
+      gap: 2rem;
+    }
   }
-  .stats-body {
-    margin-left: 2.4rem;
-    h1 {
-      font-weight: 600;
+
+  .left-side {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .first-two-charts {
+    display: grid !important;
+    // grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    @media (min-width: 992px) {
+      grid-template-columns: auto auto;
+    }
+  }
+
+  .custom-card {
+    background-color: #fff;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+    // margin-bottom: 2rem;
+
+    // &--warning {
+    //   max-width: 450px;
+    // }
+
+    // &--status {
+    //   max-width: 330px;
+    // }
+
+    &__header {
+      margin: 0 1.5rem;
+      padding: 1rem 0;
+      display: flex;
+      align-items: center;
+      border-bottom: 1px solid #eee;
+    }
+
+    &__title {
       margin-bottom: 0;
+      margin-left: 0.8rem;
+      font-weight: normal;
+      font-size: 1.7rem;
     }
-    p {
-      color: #000;
-      font-weight: 600;
-      margin-top: 0.7rem;
-      margin-bottom: 0;
-      font-size: 17px;
-      text-transform: uppercase;
-    }
-  }
-}
-.blue {
-  color: #096dd9;
-  h1 {
-    color: #096dd9;
-  }
-}
 
-.green {
-  color: #52c41a;
-  h1 {
-    color: #52c41a;
-  }
-}
-
-.red {
-  color: #f5222d;
-  h1 {
-    color: #f5222d;
-  }
-}
-.gold {
-  color: #faad14;
-  h1 {
-    color: #faad14;
-  }
-}
-.display-flex {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.ant-select-selector {
-  border-radius: 5px !important;
-}
-.block-pie-system {
-  min-height: 55px;
-  line-height: 30px;
-}
-div.dashboard-event {
-  display: inline-block;
-  .card-body{
-    background-color: #fbd29c;
-  }
-  .time-ago {
-    font-size: 12px;
-    color: #676460;
-  }
-}
-.block-area-chart {
-  .ant-tabs {
-    .ant-tabs-nav {
-      margin-bottom: 0;
+    &__body {
+      margin-left: 1.5rem;
+      margin-right: 1.5rem;
+      // margin-bottom: 0.5rem;
     }
   }
-}
-.card-header {
-  // background-color:#c8daff!important;
-}
-.block-info{
-    .block-detail{
-        padding-bottom: 10px;
+
+  .right-side {
+    // TODO Temporary
+    min-width: 320px;
+
+    .collected-data {
+      // TODO Temporary
+      height: 100%;
+      width: 100%;
+      // max-width: 330px;
+
+      .block-box {
+        height: 192px;
+        margin: 1rem 0;
+        border-bottom: 1px solid #eee;
+        position: relative;
+
+        &__head {
+          display: inline-flex;
+          align-items: center;
+          border: 1px solid #eee;
+          padding: 0.05rem 0.3rem;
+          margin-bottom: 1rem;
+          border-radius: 5px;
+        }
+
+        &__circle {
+          height: 12px;
+          width: 12px;
+          border-radius: 50%;
+        }
+
+        &__title {
+          margin-left: 0.4rem;
+        }
+
+        &__body {
+          display: grid;
+          grid-template-columns: repeat(8, 1fr);
+          row-gap: 1rem;
+          column-gap: 1rem;
+        }
+
+        &__foot {
+          position: absolute;
+          right: 15px;
+          bottom: 10px;
+          // margin-top: 0.6rem;
+        }
+      }
+
+      .block {
+        border-radius: 2px;
+        height: 44px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #000;
+        font-size: 0.9rem;
+        cursor: pointer;
+      }
     }
-}
-
-.custom-card-header {
-  background-color: #0D0C1C !important;
-  color: #ffffff;
-  border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
-  padding: 1rem 2rem;
-}
-
-.custom-ant-dashboard {
-  .ant-modal-body {
-    padding: 0 !important;
   }
-  
-  .ant-modal-header {
-    background-color: #0D0C1C !important;
-    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
+
+  .apexcharts-legend-series {
+    border: 1px solid #eee;
+    border-radius: 6px;
+    padding: 0.2rem 0.3rem;
+  }
+
+  .ant-picker {
+    min-width: 150px;
   }
 }
