Update the newest code

--- a/src/layouts/Main/style.module.scss
+++ b/src/layouts/Main/style.module.scss
@@ -145,6 +145,7 @@
     right: rem(-20);
     background-color: white;
     border-radius: 50%;
+    border: 1px solid #f7f8f9;
     z-index: 2;
     width: 40px;
     height: 40px;
