--- a/src/@vb/components/Breadcrumbs2/style.scss
+++ b/src/@vb/components/Breadcrumbs2/style.scss
@@ -1,10 +1,25 @@
 .Breadcrumb {
+  background-color: #fff;
+  padding: 2rem;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  display: flex;
+  justify-content: space-between;
+  // margin-bottom: 2rem;
+
   .group-titles {
     display: flex;
     align-items: center;
 
     .title {
-      font-size: 1.7rem;
+      text-transform: uppercase;
+      font-size: 1.6rem;
+      margin-left: 2.8rem;
+
+      @media (min-width: 992px) {
+        text-transform: uppercase;
+        margin-left: 0rem;
+        font-size: 1.7rem;
+      }
     }
   }
 
@@ -15,7 +30,7 @@
     gap: 1rem;
 
     .avatar {
-    //   border: 1px solid #eee;
+      //   border: 1px solid #eee;
       box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     }
 
