--- a/src/layouts/Main/style.scss
+++ b/src/layouts/Main/style.scss
@@ -1,4 +1,139 @@
+body {
+  // background-color: orange !important;
+  // background-color: #f8f9fe !important;
+  background-color: #F8F9FF !important;
+}
+
 .ant-layout-sider {
-    
-    background-color: #0a1e51 !important;
+  background-color: #0a1e51;
+}
+
+.ant-layout {
+  display: grid !important;
+  grid-template-columns: 1fr;
+
+  @media (min-width: 992px) {
+    grid-template-columns: 2fr 10fr;
+  }
+}
+
+.ant-layout-content {
+  height: calc(100vh - 96px) !important;
+  overflow: auto;
+}
+
+.sidebar {
+  width: 100%;
+
+  .LgSider {
+    display: none;
+    background-color: #0a1e51;
+    height: 100vh;
+    width: 100% !important;
+    max-width: unset !important;
+    min-width: unset !important;
+
+    @media (min-width: 992px) {
+      display: block;
+    }
+  }
+
+  .SmSider {
+    display: block;
+    @media (min-width: 992px) {
+      display: none;
+    }
+
+    .toggle-btn {
+      position: fixed;
+      top: 30px;
+      left: 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
+
+.page {
+  margin: 1rem;
+  // padding: 1rem 0;
+
+  @media (min-width: 992px) {
+    margin: 2rem;
+    // padding: 2rem 0;
+  }
+}
+
+.ant-drawer {
+  display: block;
+  @media (min-width: 992px) {
+    display: none;
+  }
+}
+
+.ant-drawer-content {
+  background-color: #0a1e51 !important;
+
+  svg {
+    color: #fff;
+  }
+}
+
+.ant-drawer-body {
+  padding: 0 !important;
+}
+
+.ant-menu-item-selected {
+  background-color: unset !important;
+
+  &::after {
+    transform: unset !important;
+    opacity: 0 !important;
+    transition: unset !important;
+  }
+  // .inner {
+  // opacity: 1 !important;
+  // }
+}
+
+.active-item {
+  background-color: #1b2b65 !important;
+
+  .inner {
+    opacity: 1 !important;
+  }
+
+  // &::after {
+  //   transform: scaleY(1);
+  //   opacity: 1;
+  //   transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1), opacity 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
+  // }
+}
+
+.ant-menu-item {
+  font-size: 1.2rem;
+  margin: 0 !important;
+  padding: 1rem !important;
+  height: unset !important;
+
+  &:hover {
+    background-color: #1b2b65 !important;
+    .inner {
+      opacity: 1 !important;
+    }
+  }
+
+  .inner {
+    color: #fff;
+    opacity: 0.7;
+  }
+
+  a {
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
