--- a/src/pages/dashboard/home/style.scss
+++ b/src/pages/dashboard/home/style.scss
@@ -1,12 +1,46 @@
-body {
-  background-color: #f8f9fe !important;
-}
 .dashboard-page {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+
+  @media (min-width: 992px) {
+    grid-template-columns: 7fr 3fr;
+    gap: 2rem;
+  }
+  // display: grid;
+  // grid-template-columns: 7fr 3fr;
+
+  .chart-page div[type='donut'] {
+    width: 100% !important;
+    // height: 100% !important;
+    // min-height: unset !important;
+  }
+  .chart-page div[type='bar'] {
+    width: 100% !important;
+    // height: 100% !important;
+    // min-height: unset !important;
+  }
+
+  .chart-page .apexcharts-canvas {
+    // height: 100% !important;
+    width: 100% !important;
+  }
+
+  .chart-page svg {
+    // height: 100% !important;
+    width: 100% !important;
+  }
+
+  .chart-page foreignObject {
+    // height: 100% !important;
+    width: 100% !important;
+  }
+
   .select-bar {
     background-color: #fff;
     border-radius: 5px;
     padding: 1.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     display: grid;
     grid-template-columns: 1fr;
     justify-content: space-between;
@@ -18,6 +52,7 @@ body {
 
     @media (min-width: 996px) {
       grid-template-columns: 1fr 1fr 1fr;
+      margin-bottom: 2rem;
     }
 
     .form-item {
@@ -28,7 +63,7 @@ body {
       padding-bottom: 0.5rem;
       border: 1px solid #eee;
       border-bottom: 2px solid #017efa;
-      background-color: #FBFBFF;
+      background-color: #fbfbff;
       display: flex;
       align-items: center;
 
@@ -47,32 +82,25 @@ body {
     }
   }
 
-  .main {
-    height: 100%;
-    max-width: calc(1440px - 235px);
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 2rem;
+  .left-side {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
-    @media (min-width: 1200px) {
-      grid-template-columns: auto auto;
+    @media (min-width: 992px) {
       gap: 2rem;
     }
   }
 
-  .left-side {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-  }
-
   .first-two-charts {
     display: grid !important;
+    // height: 470px;
     // grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-template-columns: 1fr;
-    gap: 2rem;
+    gap: 1rem;
     @media (min-width: 992px) {
-      grid-template-columns: auto auto;
+      grid-template-columns: 4fr 3fr;
+      gap: 2rem;
     }
   }
 
