--- a/src/@vb/components/Breadcrumbs2/style.scss
+++ b/src/@vb/components/Breadcrumbs2/style.scss
@@ -1,10 +1,14 @@
 .Breadcrumb {
   background-color: #fff;
-  padding: 2rem;
+  padding: 2rem 1rem;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   display: flex;
   justify-content: space-between;
   // margin-bottom: 2rem;
+
+  @media (min-width: 1025px) {
+    padding: 2rem;
+  }
 
   .group-titles {
     display: flex;
@@ -13,12 +17,23 @@
     .title {
       text-transform: uppercase;
       font-size: 1.6rem;
-      margin-left: 2.8rem;
+      // margin-left: 2.8rem;
+      margin-left: 1rem;
 
-      @media (min-width: 992px) {
+      @media (min-width: 1025px) {
         text-transform: uppercase;
-        margin-left: 0rem;
+        margin-left: 0;
         font-size: 1.7rem;
+      }
+    }
+
+    .toggle-btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      @media (min-width: 1025px) {
+        display: none;
       }
     }
   }
