--- a/src/layouts/Main/style.scss
+++ b/src/layouts/Main/style.scss
@@ -1,7 +1,7 @@
 body {
   // background-color: orange !important;
   // background-color: #f8f9fe !important;
-  background-color: #F8F9FF !important;
+  background-color: #f8f9ff !important;
 }
 
 .ant-layout-sider {
@@ -12,7 +12,7 @@ body {
   display: grid !important;
   grid-template-columns: 1fr;
 
-  @media (min-width: 992px) {
+  @media (min-width: 1025px) {
     grid-template-columns: 2fr 10fr;
   }
 }
@@ -33,24 +33,35 @@ body {
     max-width: unset !important;
     min-width: unset !important;
 
-    @media (min-width: 992px) {
+    @media (min-width: 1025px) {
       display: block;
+    }
+
+    .toggle-btn-wrap {
+      position: relative;
+    }
+
+    .toggle-btn {
+      position: absolute;
+      top: 28px;
+      right: -20px;
+      display: inline-block;
+      padding: 0.5rem;
+      border-radius: 50%;
+      background-color: white;
+      border: 1px solid #eee;
+      color: #445bff;
+
+      &:hover {
+        color: blue;
+      }
     }
   }
 
   .SmSider {
     display: block;
-    @media (min-width: 992px) {
+    @media (min-width: 1025px) {
       display: none;
-    }
-
-    .toggle-btn {
-      position: fixed;
-      top: 30px;
-      left: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
   }
 }
@@ -59,7 +70,7 @@ body {
   margin: 1rem;
   // padding: 1rem 0;
 
-  @media (min-width: 992px) {
+  @media (min-width: 1025px) {
     margin: 2rem;
     // padding: 2rem 0;
   }
@@ -67,7 +78,7 @@ body {
 
 .ant-drawer {
   display: block;
-  @media (min-width: 992px) {
+  @media (min-width: 1025px) {
     display: none;
   }
 }
@@ -116,6 +127,7 @@ body {
   margin: 0 !important;
   padding: 1rem !important;
   height: unset !important;
+  width: unset !important;
 
   &:hover {
     background-color: #1b2b65 !important;
