--- a/src/pages/dashboard/home/blockModal.scss
+++ b/src/pages/dashboard/home/blockModal.scss
@@ -13,10 +13,16 @@
     display: flex;
     flex-direction: row;
     gap: 1.2rem;
+    overflow: auto;
+
+    // @media (min-width: 992px) {
+    //   flex-direction: row;
+    // }
   }
 
   &__left-side {
-    width: calc(1200px - 200px - 3rem);
+    // width: calc(1200px - 200px - 3rem);
+    min-width: calc(1200px - 200px - 3.6rem);
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -48,7 +54,8 @@
   }
 
   &__right-side {
-    width: 200px;
+    // width: 200px;
+    min-width: 200px;
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
@@ -86,13 +93,13 @@
         }
 
         .body-row-2 {
-            display: grid;
+          display: grid;
           grid-template-columns: 6fr 1fr;
-            font-size: 0.9rem;
-            border-bottom: 1px solid #f3f5f7;
-            padding-bottom: 0.25rem;
-            margin-bottom: 0.5rem;
-          }
+          font-size: 0.9rem;
+          border-bottom: 1px solid #f3f5f7;
+          padding-bottom: 0.25rem;
+          margin-bottom: 0.5rem;
+        }
       }
     }
   }
